--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0"
+  },"devDependencies": {
   },
   "scripts": {
     "dev": "nodemon src/server",
